--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@types/nodemailer": "^6.4.7",
+    "axios": "^1.3.2",
     "next": "13.1.6",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
