--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "@types/nodemailer": "^6.4.7",
+    "@upstash/qstash": "^0.3.6",
     "axios": "^1.3.2",
     "next": "13.1.6",
     "nodemailer": "^6.9.1",
